# HRPolicyGuide

./: .env.example  .gitignore  .replit  LICENSE  README.md  hr_policy_chatbot.db  main.py  pyproject.toml
attached_assets/: Pasted-Project-Title-Financial-Institution-HR-Policy-Chatbot-RAG-Objective-Develop-a-minimalist-pow-1745191155632.txt
hr_policy_chatbot/: __init__.py  app.py  config.py  database.py  hr_policy_chatbot.db  logger.py  main.py  models.py  rag.py
hr_policy_chatbot/data/: policies.py
hr_policy_chatbot/static/css/: style.css
hr_policy_chatbot/static/js/: chat.js
hr_policy_chatbot/templates/: index.html
